@@ -118,6 +118,8 @@ extern void *memset (void *s, unsigned char c, size_t n); /* c should be int acc
 extern void *memset (void *s, int c, size_t n);
 #endif
 
+extern void *memset_explicit (void *s, int c, size_t n);
+
 /* extern char *strerror(int errnum); */
 #if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_tlcs90) || defined (__SDCC_ez80_z80) || defined (__SDCC_z80n)
 extern size_t strlen (const char *s) __preserves_regs(d, e, iyl, iyh);
